Change mailto link color to light gold

--- a/style.css
+++ b/style.css
@@ -179,4 +179,9 @@ body {
   text-align: center;
   padding: 20px;
   border-top: 1px solid #4f664f;
+
+/* style for mailto link in footer */
+a[href^="mailto"] {
+  color: #F1E5AC;
+}
 }
