--- a/style.css
+++ b/style.css
@@ -181,10 +181,11 @@ body {
   border-top: 1px solid #4f664f;
 
 /* style for mailto link in footer */
-a[href^="maito"] {
+/* Force mailto links to be gold in all states */
+a[href^="mailto"], 
+a[href^="mailto"]:visited, 
+a[href^="mailto"]:hover, 
+a[href^="mailto"]:active {
   color: #F1E5AC !important;
 }
-/* fix mailto link color */
-a[href^="mailto"] {
-  color: #F1E5AC !important;
-}
+
